Ensure the date doesn't come too close to the edge of the card on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -40,24 +40,16 @@ p em {
 
 h1,
 h2 {
-    margin-left: 1em;
-}
-
-h1,
-h2,
-strong {
-  color: #333;
-}
-
-div .card h2 {
     margin-top: -1.5em;
+    margin-left: 1em;
+    margin-right: 1em;;
+    color: #333;
 }
 
 div .lazy-load-trigger {
     height: 1px;
 }
 
-/* Add shadows to create the "card" effect */
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -77,7 +69,6 @@ div .lazy-load-trigger {
     text-align: center;
 }
 
-/* On mouse-over, add a deeper shadow */
 .card:hover {
     box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.2);
 }
